[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nav2py_sicnav_controller"
version = "0.0.1"
dependencies = [
    "PyYAML==6.0.2",
    "casadi==3.6.5",
    "certifi==2024.2.2",
    "charset-normalizer==3.3.2",
    "cloudpickle==3.0.0",
    "contourpy==1.1.1",
    "cycler==0.12.1",
    "cython==0.29.33",
    "fonttools==4.52.1",
    "idna==3.7",
    "importlib-metadata==4.13.0",
    "importlib-resources==6.4.0",
    "kiwisolver==1.4.5",
    "matplotlib==3.7.5",
    "numpy==1.24.4",
    "packaging==24.0",
    "pillow==10.3.0",
    "pyparsing==3.1.2",
    "requests==2.32.2",
    "six==1.16.0",
    "stable-baselines3==1.7.0",
    "tensorboard==2.14.0",
    "tqdm==4.66.4",
    "torch==1.13.1",
    "torchvision==0.14.1",
    "urllib3==2.2.1",
    "zipp==3.19.0"
]
requires-python = ">=3.8,<3.9"
description = "SICNav Controller for Navigation2 with Python integration"
readme = "README.md"
license = {text = "BSD-3-Clause"}

[tool.setuptools]
packages = ["nav2py_sicnav_controller"]

[tool.setuptools.package-data]
"nav2py_sicnav_controller" = [
    "nav2py_sicnav_controller/*",
    "safe-interactive-crowdnav/**/*"
]

[tool.hatch.envs.default.scripts]
install-gym = [
    "python -m pip install --upgrade pip",
    "python -m pip install setuptools==57.5.0 wheel==0.38.0",
    "python -m pip install gym==0.21.0",
    "python -m pip install stable-baselines3==1.7.0",
]